--- a/Front/CSS/style.css
+++ b/Front/CSS/style.css
@@ -1,7 +1,9 @@
 body{
 	margin: 0;
 	padding: 0;
+    font-family: myriad-pro, sans-serif;
 }
+
 
 .slideshow-container{
   position: relative;
@@ -241,7 +243,7 @@ body{
 	top: 15%;
     width: 20%;
     position: absolute;
-    left: 50%;
+    animation: mymove 10s infinite;
 }
 
 #Contact{
@@ -255,7 +257,8 @@ body{
     margin: auto;
 }
 
-.map{
+#map{
+    height: 700px;
 	width: 90%;
 	position: absolute;
 }
@@ -351,14 +354,20 @@ body{
 .form{
 	width: 100%;
 }
-
+.thank{
+    margin-left: 30px;
+    display: none;
+    font-size: 11px;
+    color: #39B54A;
+}
 .form button{
+    padding: 7px;
 	width: 65px;
     float: right;
     margin-right: 23px;
     background-color: #000;
     color: white;
-    margin-top: 4px;
+    margin-top: 40px;
 }
 
 .form button p{
@@ -404,7 +413,7 @@ body{
 .form_3{
 	margin-top: 55px;
 	width: 51%;
-    height: 170px;
+    height: 185px;
     display: inline-block;
     float: right;
 }
@@ -416,11 +425,6 @@ body{
 .form_3 p{
 	background-color: #EDCCE8;
 	width: fit-content;
-}
-
-#SentButton{
-    padding: 7px;
-    margin-top: 20px;
 }
 
 #SentButton:hover{
@@ -454,7 +458,10 @@ body{
 	display: none!important;
 }
 
-
+@keyframes mymove {
+  from {right: 0%;}
+  to {right: 100%;}
+}
 @keyframes halfcircleAnimationInit {
     from{
         opacity: 0;
