--- a/Front/CSS/style.css
+++ b/Front/CSS/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 #myMenu{
-	color: white;
+	color: #fff;
     font-size: 39px!important;
     top: 25px;
     right: 34px;
@@ -30,8 +30,8 @@ body{
 #myDropdown a {
 	text-decoration: none;
     color: #000000;
-    font-size: 50px;
-    padding: 20px;
+    font-size: 72px;
+    padding-bottom: 20px;
     display: block;
 }
 
@@ -46,16 +46,15 @@ body{
 
 .Logo{
 	text-align: left;
-    float: left;
     width: 24%;
-    margin: 30px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-bottom: 4%;
 }
 
 .Menu{
 	width: 45%;
-    margin-left: -51px;
-    margin-top: 20%;
-    display: inline-block;
+    margin: auto;
 }
 
 .MySlides {
@@ -177,15 +176,15 @@ body{
 #collectorcars{
 	text-align: center;
 	padding-top:60px;
-	width: 80%;
+	width: 100%;
 	height:auto;
-	margin: auto;
+	
 }
 
 .collectorcars_  {
+    margin: auto;
 	margin-top:60px;
-	width: 100%;
-	height:auto;
+	width: 80%;
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
@@ -353,25 +352,26 @@ body{
 
 .form{
 	width: 100%;
+    height: 305px;
 }
 .thank{
+    width: 62%;
     font-family: 'Roboto', sans-serif;
     margin-left: 30px;
     display: none;
     font-size: 11px;
     color: #39B54A;
 }
-.form button{
+.myform button{
     padding: 7px;
 	width: 65px;
     float: right;
     margin-right: 23px;
     background-color: #000;
     color: white;
-    margin-top: 40px;
 }
 
-.form button p{
+.myform button p{
 	margin: 6px;
 	letter-spacing: 2px;
 	background-color: #EDCCE8;
@@ -379,6 +379,7 @@ body{
 }
 
 .form_1{
+    height: auto;
 	float: left;
 	width: 40%;
 	margin-left: 30px;
@@ -403,6 +404,7 @@ body{
 	background-color: #F2F2F2;
 	resize: none;
 	width: 167px;
+    margin-bottom: 0px!important;
 }
 
 .form_2{
@@ -416,7 +418,7 @@ body{
 .form_3{
 	margin-top: 55px;
 	width: 51%;
-    height: 185px;
+    height: auto;
     display: inline-block;
     float: right;
 }
